# dropbox_helper

./: .gitignore  README.md  index.html  pyproject.toml  search.js  test.ipynb
.github/workflows/: ci.yml
docs/templates/: config.mako
src/: dropbox_helper.html
src/dropbox_helper/: __init__.py  core_mixin.html  core_mixin.py  csv_mixin.html  csv_mixin.py  dbx.html  dbx.py  npz_mixin.html  npz_mixin.py  parquet_mixin.html  parquet_mixin.py  pickle_mixin.html  pickle_mixin.py  shapefile_mixin.html  shapefile_mixin.py
tests/: test_csv.py  test_init.py  test_npz.py  test_parquet.py  test_pickle.py  test_shp.py  utils.py
