[project]
name = "dropbox-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "dropbox>=12.0.2",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pytest>=8.3.5",
    "pytest-order>=1.3.0",
    "scipy>=1.15.2",
]

[tool.pytest.ini_options]
# Tell pytest to search in `tests/`
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
